<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_loan"
            android:icon="@drawable/ic_collections_bookmark_black_24dp"
            android:title="@string/my_loans"/>
        <item
            android:id="@+id/loan_historical"
            android:icon="@drawable/ic_style_black_24dp"
            android:title="@string/loan_historical" />
        <item
            android:id="@+id/search_in_collection"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_in_collection"/>
        <item
            android:id="@+id/change_pass_sisbi"
            android:icon="@drawable/ic_vpn_key_black_24dp"
            android:title="@string/change_pass_sisbi"
            android:enabled="false"/>
        <item
            android:id="@+id/issue_discharge"
            android:icon="@drawable/ic_folder_shared_black_24dp"
            android:title="@string/issue_discharge"
            android:enabled="false"/>

    </group>

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/faq"
            android:enabled="false"/>
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/about_us"
            android:enabled="false"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit" />
    </group>

</menu>
