<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/sort_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item android:title="@string/sort_menu"
                android:enabled="false" />
            <item android:id="@+id/sort_by_title"
                    android:title="@string/by_title" />
            <item android:id="@+id/sort_by_author"
                android:title="@string/by_author" />
            <item android:id="@+id/sort_by_date"
                android:title="@string/by_date"/>
        </menu>
    </item>

</menu>