<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select"
        android:orderInCategory="100"
        android:title="@string/select"
        app:showAsAction="never"
        android:enabled="false"/>
    <item
        android:id="@+id/action_renewAll"
        android:orderInCategory="100"
        android:title="@string/renewAll"
        app:showAsAction="never"
        android:enabled="false"/>
    <item
        android:id="@+id/action_newLoan"
        android:orderInCategory="100"
        android:title="@string/newLoan"
        app:showAsAction="never" />
</menu>
