<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"

        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="56dp">

        <LinearLayout
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="50dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_mala" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/app_sgl"
                    android:layout_marginBottom="-10dp"
                    android:textSize="50dip"
                    android:textStyle="bold"
                    android:includeFontPadding="false"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10dip"
                    android:maxWidth = "150dip"
                    android:text="@string/whatIs" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/disclaimer2" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:onClick="logar"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:text="avançar" />
    </LinearLayout>
</ScrollView>