<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="br.ufrn.mala.activity.NewLoanActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_loan_det_helper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/newLoanDetHelp"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/barcode_bg"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/Cod_Barra_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/lbl_bar_code"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cod_Barra_detail_new_loan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/Cod_Barra_label"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Titulo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Cod_Barra_label"
                    android:padding="3dp"
                    android:text="@string/lbl_tittle"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/titulo_detail_new_loan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Cod_Barra_label"
                    android:layout_toRightOf="@+id/Titulo_label"
                    android:ellipsize="end"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Autor_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Titulo_label"
                    android:padding="3dp"
                    android:text="@string/lbl_author"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/autor_detail_new_loan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Titulo_label"
                    android:layout_toRightOf="@+id/Autor_label"
                    android:ellipsize="end"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Tipo_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Autor_label"
                    android:padding="3dp"
                    android:text="@string/lbl_mat_type"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tipo_detail_new_loan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Autor_label"
                    android:layout_toRightOf="@+id/Tipo_label"
                    android:ellipsize="end"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/Status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Tipo_label"
                    android:padding="3dp"
                    android:text="@string/lbl_mat_status"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/status_detail_new_loan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Tipo_label"
                    android:layout_toRightOf="@+id/Status_label"
                    android:ellipsize="end"
                    android:padding="3dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                style="@style/SpinnerLabel"
                android:id="@+id/new_loan_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/newLoanDetTipo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatSpinner
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:id="@+id/loan_type_spinner"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>

                <android.support.v7.widget.AppCompatImageButton
                    android:id="@+id/btn_types_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/loan_type_spinner"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_help_outline_blue_30dp" />

            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_buscar_Material"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:text="@string/btnNewLoan"
                android:textSize="15sp"
                android:theme="@style/AppDefaultButton" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/obs1_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="*"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/new_loan_obs1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/obs1_dot"
                    android:padding="2dp"
                    android:text="@string/newLoanDetOb1"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/obs2_dot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/new_loan_obs1"
                    android:padding="2dp"
                    android:text="*"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/new_loan_obs2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/new_loan_obs1"
                    android:layout_toRightOf="@id/obs2_dot"
                    android:padding="2dp"
                    android:text="@string/newLoanDetOb2"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>

</LinearLayout>
